# egypt_national_id_api

./: .gitignore  README.md
.github/workflows/: egypt_national_id.yml
national_id_api/: .coveragerc  .env  README.md  alembic.ini  database.env  docker-compose.yml  dockerfile  pyproject.toml
national_id_api/app/: custom_exceptions.py  database_operations.py  database_seeds.py  database_settings.py  main.py  models.py  national_id.py  response_codes.py  schema.py  settings.py
national_id_api/database_migrations/: env.py
national_id_api/database_migrations/versions/: 002b0dc2c518_create_tables.py
national_id_api/tests/: conftest.py  db_helper.py  pytest.ini  readme.md  test_database_operations.py  test_national_id.py
national_id_api/tests/reports/html/: class_index.html  function_index.html  index.html  status.json  z_5f5a17c013354698_custom_exceptions_py.html  z_5f5a17c013354698_database_seeds_py.html  z_5f5a17c013354698_database_settings_py.html  z_5f5a17c013354698_response_codes_py.html  z_5f5a17c013354698_schema_py.html
